test/success/implicit_copy_for_copy_refs/main.sk
module Main {

class Foo {

}

instance Copy[Foo]

instance Clone[Foo] {
    fn clone(&self) -> Foo {
        Foo()
    }
}

fn sink(i: Foo) {

}

fn main() {
    let f = Foo();
    let onlyRef = &f;
    sink(onlyRef);
}

}