test/errors/move_in_loop/main.sk
module Main {

class Foo {

}

fn sink[T](i: T) {

}

fn main() {
    let f = Foo();
    loop {
        sink(f);
    }
}

}